<resources>
    <string name="app_name">Одеяло</string>
    <string name="in_design">Раздел в разработке</string>
    <string name="hallow">Добро пожаловать!</string>
    <string name="network_error">Ошибка сети.</string>
    <string name="connect">Соединение восстановлено</string>
    <string name="db_error">Ошибка базы данных</string>
    <string name="unknown_error_placeholder">Извините, произошла непредивденная ошибка. Попробуйте немного позже</string>
    <string name="after_connection">При восстановлении соединения данные загрузятся автоматически</string>
    <string name="diary_empty">Это место для заметок. Напиши, как прошёл день, как себя чувствуешь :)</string>
    <string name="diary_empty_placeholder">Напиши, как прошёл день, как себя чувствуешь :)</string>
    <string name="just_a_little_left">Осталось чуть-чуть</string>
    <string name="reset_password">Восстановление пароля</string>
    <string name="nothing">Ничего нет :(</string>
    <string name="need_data">Необходимы данные.</string>
    <string name="need_user_data">Пожалуйста, укажите свои данные, чтобы HR-менеджер мог вас идентифицировать. Если вы не готовы к этому, укажите псевдоним.</string>
    <string name="enter_your_data">Укажите свои данные</string>
    <string name="placeholder_registration">Почта и телефон нужны для напоминаний о необходимости пройти практику или записать впечатления о дне</string>
    <string name="email_empty_placeholder">Укажите почту</string>
    <string name="name_empty_placeholder">Укажите имя</string>
    <string name="field_empty_placeholder">Данное поле не может быть пустым</string>
    <string name="birthday_empty_placeholder">Укажите дату рождения</string>
    <string name="city_empty_placeholder">Укажите город</string>
    <string name="phone_empty_placeholder">Укажите номер телефона</string>
    <string name="password_empty_placeholder">Укажите пароль</string>
    <string name="password_confirm_empty_placeholder">Повторите пароль</string>
    <string name="password_confirm_not_equals_placeholder">Пароли не совпадают</string>
    <string name="email_not_valid_placeholder">Почта указана в неверном формате</string>
    <string name="phone_not_valid_placeholder">Номер телефона указан в неверном формате</string>
    <string name="main">Главная</string>
    <string name="my_program">Моя программа</string>
    <string name="today">Сегодня</string>
    <string name="here_goes">Приступим</string>
    <string name="plan">План</string>
    <string name="theory">Теория</string>
    <string name="tests">Тесты</string>
    <string name="psychologist">Психолог</string>
    <string name="practice">Практика</string>
    <string name="tracker">Трекер настроения</string>
    <string name="tracker_signature">Отметь, как ты чувствуешь себя прямо сейчас</string>
    <string name="diary">Дневник</string>
    <string name="thought_diary">Дневник мыслей</string>
    <string name="diary_notes">Дневник (заметки)</string>
    <string name="diary_signature">Расскажи, как прошёл день или выплесни эмоции</string>
    <string name="diary_hint">Напиши сюда что-нибудь…</string>
    <string name="hints">Подсказки</string>
    <string name="exercises">Упражнения</string>
    <string name="group_problem">Группы проблем</string>
    <string name="group_problem_q_1">В какой сфере вы испытываете трудности?</string>
    <string name="group_problem_hint_1">Укажите сферу</string>
    <string name="group_problem_desc_1">Например, работа или личная жизнь</string>
    <string name="group_problem_q_2">Что вы чувствуете по этому поводу?</string>
    <string name="group_problem_hint_2">Укажите эмоцию</string>
    <string name="group_problem_desc_2">Одно слово, наиболее ярко, описывающее ваши ощущения</string>
    <string name="group_problem_q_3">Чего вы хотите добиться, когда решите проблему?</string>
    <string name="group_problem_hint_3">Укажите цель</string>
    <string name="exercises_signature">Прокачай себя</string>
    <string name="psychoeducation">Теория</string>
    <string name="psychoeducation_signature">Познай психологию</string>
    <string name="diagnostics">Тестирование</string>
    <string name="diagnostics_signature">Познай себя</string>
    <string name="daily_tasks">На каждый день</string>
    <string name="problem_work">Проработка проблемы</string>
    <string name="cbt">КПТ</string>
    <string name="plans">Планы</string>
    <string name="plans_signature">Помогут выполнять задания поэтапно и вовремя</string>
    <string name="experiments">Поведенч. эксперименты</string>
    <string name="experiments_signature">Наглядная проверка иррациональных идей</string>
    <string name="ladders">Лестницы страха</string>
    <string name="ladders_signature">Маленькими шагами к успеху</string>
    <string name="rebt">РЭПТ</string>
    <string name="change">Изменить</string>
    <string name="problem_analysis">Анализ\nпроблемы</string>
    <string name="problem_analysis_signature">Анализ\nпроблемы</string>
    <string name="beliefs_check">Проверка\nубеждений</string>
    <string name="beliefs_check_signature">Анализ\nпроблемы</string>
    <string name="beliefs_analysis">Анализ\nубеждений</string>
    <string name="beliefs_analysis_signature">Анализ проблемы</string>
    <string name="dialog">Диалог</string>
    <string name="dialog_me">Диалог\nс собой</string>
    <string name="dialog_signature">Анализ проблемы</string>
    <string name="add">Добавить</string>
    <string name="cbt_diary">КПТ-дневник</string>
    <string name="cbt_diary_new_name">Что случилось?</string>
    <string name="cbt_diary_desc">Это способ самоанализа, который позволяет отслеживать эмоции и чувства, выявлять взаимосвязи между ситуациями и мыслями</string>
    <string name="free_diary">Заметки</string>
    <string name="free_diary_desc">Заметки помогают отслеживать, как прошёл день, как себя чувствуешь и так далее :)</string>
    <string name="thought_diary_signature">Способ зафиксировать и изучить важные события своей жизни</string>
    <string name="situation">Ситуация</string>
    <string name="behaviour">Поведение</string>
    <string name="mood">Настроение</string>
    <string name="auto_thought">Автоматическая мысль</string>
    <string name="proofs">Доказательства</string>
    <string name="refutations">Опровержения</string>
    <string name="alternative_thought">Альтернативная мысль</string>
    <string name="new_mood">Новое настроение</string>
    <string name="level">Уровень настроения</string>
    <string name="new_level">Новый уровень</string>
    <string name="mood_with_level">%1$s %2$s%%</string>
    <string name="situation_helper">Опиши ситуацию…</string>
    <string name="behaviour_helper">Как ты себя повел?</string>
    <string name="mood_helper">Какие чувства вызвала у вас эта ситуация?</string>
    <string name="auto_thought_helper">Какие были мысли в этот момент?</string>
    <string name="proofs_helper">Что подтверждает эту мысль?</string>
    <string name="refutations_helper">Что опровергает эту мысль?</string>
    <string name="alternative_thought_helper">Что ты думаешь об этой ситуации теперь?</string>
    <string name="new_mood_helper">Какое у тебя теперь настроение?</string>
    <string name="save">Сохранить</string>
    <string name="emoji_error">Необходимо выбрать хотя бы один смайлик</string>
    <string name="cancel">Отмена</string>
    <string name="success">Успех!</string>
    <string name="necessary_to_fill">Необходимо заполнить</string>
    <string name="situation_help">Запиши факты, без мыслей и эмоций.</string>
    <string name="behaviour_help">Запиши сами действия.</string>
    <string name="mood_help"> Опиши все чувства, которые возникли. Оцени их уровень на слайдере ниже.</string>
    <string name="auto_thought_help">Опиши как можно подробно основные мысли, которые пришли в голову в момент стрессовой ситуации. Это могут быть оскорбительные насмешки, угрызения совести, жизненные убеждения, установки и т.д.</string>
    <string name="proofs_help">Запиши аргументы, подтверждающие мысли из прошлого пункта</string>
    <string name="refutations_help">Запиши контраргументы, показывающие, что эти мысли не совсем корректны и правдивы</string>
    <string name="alternative_thought_help">Сформулируй альтернативные мысли, которые можно противопоставить автоматической мысли, и которые будут соответствовать прошлому пункту</string>
    <string name="new_mood_help">Опиши, как ты себя чувствуешь после заполнения дневника</string>
    <string name="no_diaries">Вы еще не заполняли дневник в нашем приложении. Самое время начать!</string>
    <string name="start">Начать</string>
    <string name="test_progress">%1$s из %2$s</string>
    <string name="depression">Депрессия</string>
    <string name="anxiety">Тревожность</string>
    <string name="universal">Универсальные</string>
    <string name="burnout">Выгорание</string>
    <string name="breathing_techniques">Дыхательные техники</string>
    <string name="relaxation_techniques">Техники релаксации</string>
    <string name="strategies_coping_with_stress">Копинг стратегии</string>
    <string name="no_tests">Вы еще не проходили тесты в нашем приложении. Самое время начать!</string>
    <string name="history">История</string>
    <string name="go">Пройти</string>
    <string name="go_to">Перейти</string>
    <string name="depression_beck_test">Шкала Бека для оценки депрессии</string>
    <string name="depression_beck_test_desc">Данный опросник составлен из 13 групп и четырех утверждений в группе. Внимательно прочтите каждую группу утверждений и выберите утверждение, которое наиболее точно отражает ваше самочувствие, образ мыслей или настроение на этой неделе, включая сегодняшний день.</string>
    <string name="depression_beck_test_desc_short">13 групп и 4 утверждения в группе.</string>
    <string name="not_sad">Я не чувствую себя несчастным</string>
    <string name="sad">Я чувствую себя несчастным</string>
    <string name="always_sad">Я всё время несчастен и не могу освободиться от этого чувства.</string>
    <string name="strong_sad">Я настолько несчастен и опечален, что не могу этого вынести</string>
    <string name="future_good">Думая о будущем, я не чувствую себя особенно разочарованным</string>
    <string name="send">Отправить</string>
    <string name="professional_development">Повышение квалификации</string>
    <string name="specialization">Специализация</string>
    <string name="about_me">О себе</string>
    <string name="education">Образование</string>
    <string name="sns">ФИО</string>
    <string name="city">Город</string>
    <string name="format">Формат работы (очно, дистанционно)</string>
    <string name="gender">Пол</string>
    <string name="man">Мужской</string>
    <string name="woman">Женский</string>
    <string name="other">Другое</string>
    <string name="birthday">Дата рождения</string>
    <string name="request">Запрос</string>
    <string name="mail">Почта</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="describe_request">Опишите свой запрос</string>
    <string name="request_to_psychologist_disclaimer">Вы можете связаться с психологом с помощью этой формы. Прежде чем описать здесь проблему, проверьте данные в профиле - они будут доступны психологу. Не нужно дублировать их в данной форме. Помимо информации, психологу будут доступны результаты тестов и выполненные упражнения.</string>
    <string name="what_do_you_want_to_share">Чем хочешь поделиться?</string>
    <string name="go_to_kpt_diary">Перейти в КПТ-дневник</string>
    <string name="register">Зарегистрироваться</string>
    <string name="log_in">Войти</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="start_board_desc">Одеяло поможет лучше понимать себя и контролировать свое состояние.</string>
    <string name="nice_to_meet_you">Приятно познакомиться</string>
    <string name="skip_onboard">Пропустить онбординг</string>
</resources>