<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <include
        layout="@layout/include_simple_toolbar" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_margin="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/meditation" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_mail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:hint="@string/mail"
            android:imeOptions="actionDone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeOptions="actionDone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeat_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeat_password"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_password"
            android:imeOptions="actionDone" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registration_button"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />

    <Button
        android:id="@+id/go_to_login_button"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in" />


</LinearLayout>