<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/include_toolbar"
            layout="@layout/include_simple_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toStartOf="@+id/end"
            app:layout_constraintStart_toStartOf="@+id/start"
            app:layout_constraintTop_toBottomOf="@+id/include_toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sns"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/education_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/end"
            app:layout_constraintStart_toStartOf="@+id/start"
            app:layout_constraintTop_toBottomOf="@+id/name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/education_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/education" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/about_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintTop_toBottomOf="@id/education_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/about_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/about_me" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/city_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintTop_toBottomOf="@id/about_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/city_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/format_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintTop_toBottomOf="@id/city_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/format_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/format" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/birthday"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/birthday"
            app:layout_constraintEnd_toStartOf="@+id/edit_birthday_button"
            app:layout_constraintStart_toEndOf="@+id/gender_rg"
            app:layout_constraintTop_toTopOf="@+id/gender" />

        <ImageView
            android:id="@+id/edit_birthday_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/birthday"
            app:layout_constraintEnd_toStartOf="@+id/end"
            app:layout_constraintTop_toTopOf="@+id/birthday"
            app:srcCompat="@drawable/ic_edit" />

        <TextView
            android:id="@+id/birthday_field"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/birthday"
            app:layout_constraintTop_toBottomOf="@+id/birthday"
            tools:text="TextView" />

        <TextView
            android:id="@+id/gender"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/gender"
            app:layout_constraintStart_toStartOf="@+id/start"
            app:layout_constraintTop_toBottomOf="@+id/format_layout" />

        <RadioGroup
            android:id="@+id/gender_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/gender"
            app:layout_constraintTop_toBottomOf="@id/gender">

            <RadioButton
                android:id="@+id/man"
                android:checked="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/man" />

            <RadioButton
                android:id="@+id/woman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/woman" />

            <RadioButton
                android:id="@+id/other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other" />
        </RadioGroup>

        <TextView
            android:id="@+id/specialization"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/specialization"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintTop_toBottomOf="@id/gender_rg" />


        <com.google.android.material.chip.ChipGroup
            android:id="@+id/specializations_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintTop_toBottomOf="@id/specialization" />

        <TextView
            android:id="@+id/professional_development"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/professional_development"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintTop_toBottomOf="@id/specializations_group" />

        <Button
            android:id="@+id/add_course_button"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            app:icon="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="@+id/professional_development"
            app:layout_constraintEnd_toStartOf="@+id/end"
            app:layout_constraintTop_toTopOf="@+id/professional_development" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/courses_rw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/end"
            app:layout_constraintStart_toStartOf="@+id/start"
            app:layout_constraintTop_toBottomOf="@+id/professional_development" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="20dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/courses_rw"
            app:layout_constraintVertical_bias="1.0" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>