<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/constraint"
    android:layout_height="match_parent"
    tools:context=".ui.exercises.cbt.NewFreeDiaryFragment">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/include_simple_toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/include_toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/field"
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:layout_height="wrap_content"
            android:hint="@string/what_do_you_want_to_share"
            android:imeOptions="actionDone" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        app:layout_constraintBottom_toTopOf="@id/KPT_diary_tv"
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        android:text="@string/save" />

    <Button
        android:id="@+id/KPT_diary_tv"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:textColor="@color/md_theme_light_primary"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:padding="10dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/go_to_kpt_diary"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>